# ppl-old

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  point.ll
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
benchmarks/factorial/: main-naive.py  main.ppl  main.py
benchmarks/factorial/src/: main.ppl
benchmarks/helloworld/src/: main.cpp  main.ppl
benchmarks/linalg/: gauss_haskell.hs  haskel.json  main.py  plot_parametrized.py  ppl.csv  ppl.json  python.json  test.py  times.csv
benchmarks/linalg/linalg/: .gitignore
benchmarks/linalg/src/: main.ppl
benchmarks/series/: main.ppl  main.py
docs/features/: syntax.md
driver/: Cargo.toml
driver/src/: args.rs  config.rs  lib.rs  main.rs
driver/src/commands/: build.rs  compile.rs  execute.rs  init.rs  mod.rs  new.rs  run.rs
driver/src/config/: mod.rs
driver/src/config/error/: mod.rs  not_found.rs
driver/src/validators/: path.rs
driver/template/: .gitignore  build.config
driver/template/src/: lib.ppl  main.ppl
examples/: hello.ppl  point.ppl  tea.ppl
extension/: README.md  language-configuration.json  package.json
extension/ppl/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
extension/ppl/syntaxes/: ppl.tmLanguage.json
extension/syntaxes/: ppl.tmLanguage.json
new-ppl/: Cargo.toml
new-ppl/src/: lib.rs  ppl.pest
new-ppl/src/ppl_ast/: Cargo.toml
new-ppl/src/ppl_parser/: Cargo.toml
new-ppl/src/ppl_parser/src/: db.rs  diagnostic.rs  lib.rs  parser.rs  ppl.pest  source.rs
new-ppl/src/ppl_parser/src/tests/: declarations.ppl  expressions.ppl  mod.rs
new-ppl/src/ppl_parser/src/tests/snapshots/: ppl_parser__tests__impl-2.snap  ppl_parser__tests__impl.snap
ppl/: README.md
ppl/src/: array.ppl  as_string.ppl  assert.ppl  core.ppl  env.ppl  f64.ppl  i32.ppl  lib.ppl  math.ppl  memory.ppl  printable.ppl  swap.ppl  threads.ppl
src/: data_holder.rs  e2e.rs  err_vec.rs  evaluator.rs  from_decimal.rs  lib.rs  line_number.rs  main.rs  mutability.rs  named.rs  reporter.rs  source_file.rs  source_location.rs  test_compilation_result.rs  utils.rs
src/ast/: annotation.rs  mod.rs  module.rs
src/ast/declarations/: function.rs  mod.rs  trait.rs  types.rs  variable.rs
src/ast/expressions/: binary.rs  call.rs  constructor.rs  literal.rs  member.rs  mod.rs  tuple.rs  type.rs  unary.rs  variable.rs
src/ast/statements/: assignment.rs  if.rs  loop.rs  mod.rs  ret.rs  use.rs  while.rs
src/ast_derive/src/: lib.rs
src/compilation/: compiler.rs  mod.rs  package.rs
src/driver/: args.rs  cli.rs  execute.rs  mod.rs
src/driver/commands/: compile.rs  execute.rs  mod.rs
src/driver/execute/: build.rs  compile.rs  mod.rs  new.rs  run.rs
src/driver/tests/: mod.rs
src/evaluate/: error.rs  evaluator.rs  mod.rs
src/hir/: annotation.rs  generic.rs  mod.rs  module.rs  specialize.rs  specialized.rs  types.rs
src/hir/declarations/: function.rs  mod.rs  trait.rs  types.rs  variable.rs
src/hir/expressions/: call.rs  constructor.rs  implicit_conversion.rs  literal.rs  member.rs  mod.rs  type.rs  variable.rs
src/hir/statements/: assignment.rs  if.rs  loop.rs  mod.rs  ret.rs  use.rs  while.rs
src/ir/: context.rs  debug_info.rs  functions.rs  hir_to_ir.rs  inkwell.rs  mod.rs  to_ir.rs  types.rs
src/ir/tests/: mod.rs
src/mir/: analysis.rs  basic_block.rs  body.rs  constant.rs  hir_to_mir.rs  local.rs  mod.rs  operand.rs  package.rs  statement.rs  to_mir.rs  ty.rs
src/mir/tests/: assign.ll  call.ll  mod.rs  other_body.ll  return_value.ll  struct.ll  switch.ll  test.ll
src/runtime/: Cargo.toml  bool.ppl  integer.ppl  libppl.dylib  none.ppl  ppl.bc  ppl.dylib  ppl.ppl  rational.ppl  string.ppl
src/runtime/src/: assert.rs  (+9 more)
src/semantics/: add_declaration.rs  ast_to_hir.rs  clone.rs  context.rs  convert.rs  declare.rs  destructors.rs  error.rs  find_declaration.rs  hir.rs  hir_to_ir.rs  implements.rs  implicit.rs  link_impls.rs  mod.rs  module.rs  monomorphize.rs  monomorphized.rs  replace_self.rs  scope.rs  tmp.rs  to_hir.rs  types.rs  unnamed.rs
src/snapshots/: ppl__e2e__internal__error.log.snap
src/syntax/: ast.rs  error.rs  identifier.rs  keyword.rs  lexer.rs  mod.rs  mutability.rs  parse.rs  precedence.rs  ranged.rs  token.rs  with_offset.rs
src/tests/: mod.rs
syntax/: Cargo.toml  README.MD
syntax/src/: action.rs  context.rs  error.rs  errors.rs  lib.rs  main.rs  parser.rs  parsers.rs  pattern.rs  rule.rs  subslice.rs  syntax.ppl  tree.rs
syntax/src/bootstrap/: mod.rs  rule_ref.rs  rules.rs
syntax/src/match/: capture.rs  error.rs  group.rs  mod.rs  pattern.rs  regex.rs  repeat.rs  rule.rs
syntax/src/patterns/: alternatives.rs  group.rs  mod.rs  named.rs  repeat.rs  rule_ref.rs  sequence.rs
(+288 files in other folders)
