[package]
name = "ppl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
rug = "1.23.0"
ast_derive = { path = "src/ast_derive" }
miette = { version = "5.10.0", git = "https://github.com/zkat/miette", branch = "main", features = [
    "fancy",
] }
thiserror = "1.0.56"
derive_more = "0.99.17"
runtime = { path = "src/runtime" }
enum_dispatch = "0.3.12"
clap = { version = "4.4.18", features = ["derive"] }
inkwell = { version = "0.3.0", features = ["llvm17-0"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
pretty_assertions = "1.4.0"
unescaper = "0.1.4"
tempdir = "0.3.7"
indexmap = "2.1.0"
gimli = { version = "0.28.1", default-features = false }

[build-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.9"
clap_complete_fig = "4.4.2"
derive_more = "0.99.17"
