[package]
name = "ppl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
rug = "1.24.1"
ast_derive = { path = "src/ast_derive" }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.59"
derive_more = "0.99.17"
runtime = { path = "src/runtime" }
enum_dispatch = "0.3.13"
clap = { version = "4.5.4", features = ["derive"] }
inkwell = { version = "0.4.0", features = [
    "llvm18-0",
], git = "https://github.com/TheDan64/inkwell" }
pretty_env_logger = "0.5.0"
log = "0.4.21"
pretty_assertions = "1.4.0"
unescaper = "0.1.4"
tempdir = "0.3.7"
indexmap = "2.2.6"
gimli = { version = "0.29.0", default-features = false }
insta = "1.38.0"
cmd_lib = "1.9.3"
derive-visitor = { version = "0.3.0", git = "https://github.com/andylokandy/derive-visitor", branch = "fix" }

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
clap_complete_fig = "4.5.0"
derive_more = "0.99.17"
