[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ppl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
derive_more = "0.99.17"
fs_extra = "1.3.0"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.38"
toml = "0.7.2"
