[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
miette = { version = "5.8.0", features = ["fancy"] }
regex = "1.7.1"
serde = { version = "1.0.158", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"

[patch.crates-io.serde]
git = "https://github.com/dewert99/serde"
branch = "partially_untagged"

[dev-dependencies]
pretty_assertions = "1.3.0"
